--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,62 +1,29 @@
-<br>
-<div class="container">
-  <h1> Contacts manager web app </h1>
-  <hr>
-
-  <div class="row">
-  
-	<!-- The list of contacts -->
-    <div class="col-6">
-      <h3>List of contacts</h3>
-      <table class="table">
-        <thead>
-        <tr>
-          <td><strong>#</strong></td>
-          <td><strong>Name</strong></td>
-          <td><strong>Adress</strong></td>
-          <td><strong>Phone</strong></td>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let contact of contacts">
-          <td>{{ contact.id}}</td>
-          <td>{{ contact.name}}</td>
-          <td>{{ contact.address}}</td>
-          <td>{{ contact.phone}}</td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-
-	<!-- The new contact block -->
-    <div class="col-6 new-contact">
-      <h3>Add new one </h3>
-      <form name="new-contact-form">
-
-        <div class="form-group row">
-          <label for="name" class="col-2 col-form-label">Name</label>
-          <div class="col-6">
-            <input class="form-control" type="text" id="name" name = "name" [(ngModel)]="newContactInfo.name">
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+  <header class="mdl-layout__header">
+		<div class="mdl-layout__header-row">
+      <span class="mdl-layout-title">Gestion des conseils de classes FCPE</span>
+			<div class = "mdl-layout-spacer"></div>
+		 </div>
+  </header>
+	 <div class = "mdl-layout__drawer">
+	 <span class="mdl-layout-title">Welcome to G2C_FCPE</span>
+	 <nav class="mdl-navigation">
+	       <a class="mdl-navigation__link" href="" style="color:blue" >Voir les campagnes</a>
+             <a class="mdl-navigation__link" href="" style="color:blue" >Créer des questionnaires</a>
+             <a class="mdl-navigation__link" href="" style="color:blue" >Visualiser les résultats</a>
+	 </nav>
+	 </div>
+    <main class="mdl-layout__content">
+	      <div class="mdl-tabs mdl-js-tabs">
+          <div class="mdl-tabs__tab-bar">
+		         <a href="#tab5-panel" class="mdl-tabs__tab is-active">Introduction</a>
+             <a routerLink='etablissements' class="mdl-tabs__tab">Adminitration</a>
+             <a class="mdl-tabs__tab">Questionnaire/Questions</a>
+             <a href="#tab3-panel" class="mdl-tabs__tab">Visualisation des résultats</a>
+		         <a href="#tab4-panel" class="mdl-tabs__tab">Gestion des campagnes</a>
           </div>
         </div>
 
-        <div class="form-group row">
-          <label for="name" class="col-2 col-form-label">Adress</label>
-          <div class="col-6">
-            <input class="form-control" type="text" id="address" name = "address" [(ngModel)]="newContactInfo.address">
-          </div>
-        </div>
-
-        <div class="form-group row">
-          <label for="name" class="col-2 col-form-label">Phone</label>
-          <div class="col-6">
-            <input class="form-control" type="text" id="phone" name = "phone" [(ngModel)]="newContactInfo.phone">
-          </div>
-        </div>
-
-        <button class="btn btn-primary" (click) = "addContact()"> Add </button>
-
-      </form>
-    </div>
-  </div>
+<router-outlet></router-outlet>
+</main>
 </div>
