--- a/src/app/components/add-etablissement/add-etablissement.component.html
+++ b/src/app/components/add-etablissement/add-etablissement.component.html
@@ -1,5 +1,5 @@
-	<!-- The new contact block -->
-<div class="row" style="margin-top: 50px;">
+	<!-- The new etablissement block -->
+<div class="row" style="margin-top: 52px;">
   <div class="offset-m3 col s12 m6">
     <div class="card" style="padding: 50px;">
         <span class="card-title" style ="margin-left: 30%;">Ajouter un etablissement </span>
@@ -11,13 +11,37 @@
             </div>
           </div>
           <div class="form-group row">
+            <label for="name" class="col-2 col-form-label">Numéro de la rue</label>
+            <div class="col-6">
+              <input class="form-control" type="text" id="numRue" name = "numrue" [(ngModel)]="Etablissement.numrue">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="name" class="col-2 col-form-label">Nom de la rue</label>
+            <div class="col-6">
+              <input class="form-control" type="text" id="nomRue" name = "nomrue" [(ngModel)]="Etablissement.nomrue">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="name" class="col-2 col-form-label">Code postal</label>
+            <div class="col-6">
+              <input class="form-control" type="text" id="cp" name = "cp" [(ngModel)]="Etablissement.cp">
+            </div>
+          </div>
+          <div class="form-group row">
             <label for="name" class="col-2 col-form-label">Ville</label>
             <div class="col-6">
               <input class="form-control" type="text" id="ville" name = "ville" [(ngModel)]="Etablissement.ville">
             </div>
           </div>
           <div class="form-group row">
-            <label for="name" class="col-2 col-form-label">academie</label>
+            <label for="name" class="col-2 col-form-label">Département</label>
+            <div class="col-6">
+              <input class="form-control" type="text" id="dpt" name = "departement" [(ngModel)]="Etablissement.departement">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="name" class="col-2 col-form-label">Academie</label>
             <div class="col-6">
               <input class="form-control" type="text" id="academy" name = "academie" [(ngModel)]="Etablissement.academie">
             </div>
