--- a/src/app/components/add-question/add-question.component.html
+++ b/src/app/components/add-question/add-question.component.html
@@ -34,7 +34,6 @@
             <label for="gen"><strong>Générique</strong></label>
           </p>
         </div>
-      </div>
       <div id = "form" [hidden]="!trans">
       <div class="row">
         <div class="input-field col s6">
@@ -69,7 +68,8 @@
           </p>
         </div>
       </div>
-      <button class="btn waves-effect waves-light" type="submit" name="action" (click)="addQuestion()"style="background-color: violet" >Sauvegarder
+      <button class="btn waves-effect waves-light" type="submit" name="action" (click)="addQuestion()" 
+      style="background-color: violet" >Sauvegarder
     <i class="material-icons right">save</i></button>
-    </form>
   </div>
+      </form>
