--- a/src/app/components/add-question/add-question.component.html
+++ b/src/app/components/add-question/add-question.component.html
@@ -68,6 +68,7 @@
           </p>
         </div>
       </div>
+      <button class="btn btn-primary" (click) = "retourQtion()" style="background-color: violet"> Retour </button>
       <button class="btn waves-effect waves-light" type="submit" name="action" (click)="addQuestion()" 
       style="background-color: violet" >Sauvegarder
     <i class="material-icons right">save</i></button>
