--- a/src/app/components/add-etablissement/add-etablissement.component.html
+++ b/src/app/components/add-etablissement/add-etablissement.component.html
@@ -2,7 +2,7 @@
 <div class="row" style="margin-top: 52px;">
   <div class="offset-m3 col s12 m6">
     <div class="card" style="padding: 50px;">
-        <span class="card-title" style ="margin-left: 30%;">Ajouter un etablissement </span>
+       <h3> <span class="card-title" style ="margin-left: 30%;">Ajouter un etablissement </span></h3>
         <form name="new-contact-form" style="padding: 10px;">
           <div class="form-group row">
             <label for="name" class="col-2 col-form-label">Name</label>
@@ -47,7 +47,9 @@
             </div>
           </div>
           <div class="card-action" style="    text-align:center;">
+            <button class="btn btn-primary" (click) = "retourEtab()"> Retour </button>
              <button class="btn btn-primary" (click) = "addEtablissement()"> Ajouter </button>
+              
           </div>
         </form>
     </div>
