--- a/src/app/components/add-questionnaire/add-questionnaire.component.html
+++ b/src/app/components/add-questionnaire/add-questionnaire.component.html
@@ -49,6 +49,7 @@
         <li class="collection-item" *ngFor="let qtion of qtionaires">  {{qtion}} <a class="destroy btn" (click)="suppQtion(qtion)" style="background-color: violet; margin-left: 55vw"><i class="Tiny material-icons">delete</i></a> </li>
       </ol>
       </div>
+      <button class="btn btn-primary" (click) = "retourQtionaire()" style="background-color: violet"> Retour </button>
       <button class="btn waves-effect waves-light" type="submit" name="action" (click)="addQuestionnaire()" style="background-color: violet">Sauvegarder
     <i class="material-icons right">save</i></button>
     </form>
